support several browers/change keys.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   a:visited{color:#ffffff;border-style:none;text-decoration:underline}
   a:hover{color:#ffffff;border-color:none;text-decoration:underline}
   address{text-align:right}
+  td{text-align:center}
 --></style>
 <title>4Dsoko</title>
 </head>
@@ -32,19 +33,32 @@
 
 <p>
 4-dimensional soko.<br>
+<table><tr><td>
+  <table>
+  <tr><th>key</th><th>function</th></tr>
+  <tr><td>a</td><td>move to -x.</td></tr>
+  <tr><td>d</td><td>move to +x.</td></tr>
+  <tr><td>w</td><td>move to -y.</td></tr>
+  <tr><td>x</td><td>move to +y.</td></tr>
+  <tr><td>A</td><td>move to -z.</td></tr>
+  <tr><td>D</td><td>move to +z.</td></tr>
+  <tr><td>W</td><td>move to -w.</td></tr>
+  <tr><td>X</td><td>move to +w.</td></tr>
+  <tr><td>q/e</td><td>change charactor.</td></tr>
+  <tr><td>[enter]</td><td>put charactor.</td></tr>
+  </table>
+</td><td>
+
 <table>
-<tr><th>key</th><th>function</th></tr>
-<tr><td>a</td><td>move to -x.</td></tr>
-<tr><td>d</td><td>move to +x.</td></tr>
-<tr><td>w</td><td>move to -y.</td></tr>
-<tr><td>x</td><td>move to +y.</td></tr>
-<tr><td>A</td><td>move to -z.</td></tr>
-<tr><td>D</td><td>move to +z.</td></tr>
-<tr><td>W</td><td>move to -w.</td></tr>
-<tr><td>X</td><td>move to +w.</td></tr>
-<tr><td>[space]</td><td>change charactor.</td></tr>
-<tr><td>[enter]</td><td>put charactor.</td></tr>
+<tr><td>Support:</td><td>WindowsXP</td><td>MacOSX</td><td>iPhone</td></tr>
+<tr><td>Internet Explorer</td><td>OK(*1)(8.0)</td><td>?</td><td></td></tr>
+<tr><td>Safari           </td><td>OK(5.1.2)</td><td>?</td><td>?</td></tr>
+<tr><td>FireFox          </td><td>OK(11.0 )</td><td>?</td><td>?</td></tr>
+<tr><td>Chrome           </td><td>OK(17   )</td><td>?</td><td>?</td></tr>
+<tr><td>Opera            </td><td>OK(11.62)</td><td>?</td><td>?</td></tr>
 </table>
+(*1) very slow and <a href="excanvas.sourceforge.net">excanvas.js</a> is required for play with IE. <br>
+</td></tr></table>
 </p>
 <address>
 programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
