add version string.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 </td></tr></table>
 </p>
 <address>
+version 1.1<br>
 programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
 source code is at <a href="https://github.com/koteitan/4dsoko">github</a><br>
 </address>
