--- a/about.html
+++ b/about.html
@@ -20,25 +20,31 @@
   address{text-align:right}
   td{text-align:center}
 --></style>
-<title>4Dsoko</title>
+<title>about 4Dsoko</title>
 </head>
 <body>
-<h1>4Dsoko</h1>
-<table><td>
-<canvas id="canvas1" width="256" height="16" style="background-color:black;border-width:1px;border-style:solid;border-color:#00FF00"></canvas><br>
-<canvas id="canvas0" width="256" height="256" style="background-color:black;border-width:1px;border-style:solid;border-color:#00FF00"></canvas><br>
-<form id="modeform">
-<input type=radio name="mode" id="mode_play" value="play" checked>play
-<input type=radio name="mode" id="mode_edit" value="edit">edit</form>
-<div id="debugout"></div>
-</td><td>
-  <h2>key assign:</h2>
+<h1>about 4Dsoko</h1>
+<ul>
+<li>4Dsoko is a 4-dimensional sokoban like puzzle game.<br>
+please move the all boxes into the goals.</li>
+<li>this game is implemented with JavaScript and HTML5 Canvas.<br>
+please enable JavaScript.</li>
+<li>With IE, please enable ActiveX Controls.</li>
+</ul>
+<table width="100%"><td width="50%">
+<img src="snapshot1.png">
+</td><td style="text-align:center;vertical-align:center">
+<a href="./">back to game</a>
+</td></tr></table>
+
+<h2>Key Assign:</h2>
+<table><td style="vertical-align:top">
   <table><caption>to play</caption>
   <tr><th>key</th><th>function</th></tr>
   <tr><td>awdx</td><td>move in (x,y).</td></tr>
   <tr><td>AWDX</td><td>move in (z,w).</td></tr>
   </table>
-  <br>
+    <br>
   <table><caption>to edit</caption>
   <tr><th>key</th><th>function</th></tr>
   <tr><td>awdx</td><td>move cursor.</td></tr>
@@ -46,15 +52,26 @@
   <tr><td>[enter]</td><td>put charactor.</td></tr>
   <tr><td>mouse<br>left click</td><td>put charactor.</td></tr>
   </table>
-
+</td><td style="vertical-align:top">
+<h2>Browser Support:</h2>
+<table border=1 style="border-collapse:collapse">
+<tr><td></td><td>WindowsXP</td><td>MacOSXLion</td><td>iPhone</td></tr>
+<tr><td>Internet Explorer</td><td>OK(*1)(8.0)</td><td>?</td><td></td></tr>
+<tr><td>Safari           </td><td>OK( 5.1.2)</td><td>OK( 5.1.3 )</td><td>NG(*2)</td></tr>
+<tr><td>FireFox          </td><td>OK(11.0  )</td><td>OK(11.0   )</td><td>NG</td></tr>
+<tr><td>Chrome           </td><td>OK(17    )</td><td>OK(18.0   )</td><td>NG</td></tr>
+<tr><td>Opera            </td><td>OK(11.62 )</td><td>OK(11.62  )</td><td>NG</td></tr>
+</table>
+(*1) very slow and <a href="excanvas.sourceforge.net">excanvas.js</a> is required for play with IE when you download. <br>
+(*2) iPhone has no keys...
 </td></tr></table>
-<p>
-<a href="about.html">about this game</a>
-</p>
+
 <address>
 version 1.2<br>
 programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
 source code is at <a href="https://github.com/koteitan/4dsoko">github</a><br>
 </address>
+
+
 </body>
 </html>
