mouse with shift to put multiple charactors, mouse wheel to scroll, softkeys are supported.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 please move the all boxes into the goals.</li>
 <li>this game is implemented with JavaScript and HTML5 Canvas.<br>
 please enable JavaScript.</li>
-<li>With IE, please enable ActiveX Controls.</li>
+<li>With IE, excanvas.js is working. please enable ActiveX controls.</li>
 </ul>
 <table width="100%"><td width="50%">
 <img src="snapshot1.png">
@@ -56,14 +56,16 @@ please enable JavaScript.</li>
 <h2>Browser Support:</h2>
 <table border=1 style="border-collapse:collapse">
 <tr><td></td><td>WindowsXP</td><td>MacOSXLion</td><td>iPhone</td></tr>
-<tr><td>Internet Explorer</td><td>OK(*1)(8.0)</td><td>?</td><td></td></tr>
-<tr><td>Safari           </td><td>OK( 5.1.2)</td><td>OK( 5.1.3 )</td><td>NG(*2)</td></tr>
-<tr><td>FireFox          </td><td>OK(11.0  )</td><td>OK(11.0   )</td><td>NG</td></tr>
-<tr><td>Chrome           </td><td>OK(17    )</td><td>OK(18.0   )</td><td>NG</td></tr>
-<tr><td>Opera            </td><td>OK(11.62 )</td><td>OK(11.62  )</td><td>NG</td></tr>
+<tr><td>Internet Explorer</td><td>OK(8.0)(*1)</td><td>-</td><td>-</td></tr>
+<tr><td>Safari           </td><td>OK( 5.1.2)</td><td>OK( 5.1.3 )</td><td>OK(*2)</td></tr>
+<tr><td>FireFox          </td><td>OK(11.0  )(*4)</td><td>OK(11.0   )</td><td>-</td></tr>
+<tr><td>Chrome           </td><td>OK(17    )</td><td>OK(18.0   )</td><td>-</td></tr>
+<tr><td>Opera            </td><td>OK(11.62 )</td><td>OK(11.62  )</td><td>OK(*3)</td></tr>
 </table>
 (*1) very slow and <a href="excanvas.sourceforge.net">excanvas.js</a> is required for play with IE when you download. <br>
-(*2) iPhone has no keys...
+(*2) editing level is not supported.<br>s
+(*3) editing level is not supported and very slow...
+(*4) mouse is not supported.
 </td></tr></table>
 
 <address>
