level server is implemented/load and save server is implemented.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <script type="text/javascript" src="./4dsoko_main.js"></script>
 <script type="text/javascript" src="./4dsoko_event.js"></script>
 <style><!--
-  body{font-family:Arial; color:white; background-color:black}  
-  input{border-style:solid}
-  a{color:#ffffff;border-style:none;text-decoration:underline}
-  a:link{color:#ffffff;border-style:none;text-decoration:underline}
-  a:visited{color:#ffffff;border-style:none;text-decoration:underline}
-  a:hover{color:#ffffff;border-color:none;text-decoration:underline}
+  body{font-family:Arial; color:#00FF00; background-color:black}  
+  a{color:#00FF00;border-style:none;text-decoration:underline}
+  a:link{color:#00FF00;border-style:none;text-decoration:underline}
+  a:visited{color:#00FF00;border-style:none;text-decoration:underline}
+  a:hover{color:#00FF00;border-color:none;text-decoration:underline}
   address{text-align:right}
   td{text-align:center}
+  input{border-style:solid;border-color:#00FF00;background-color:#000000;color:#00FF00}
   .tdbutton{border-width:1px;border-style:solid;border-color:white;height:30px;width:30px}
 --></style>
 <title>4Dsoko</title>
@@ -63,6 +63,8 @@
   <tr><td>wheel</td><td>scroll.</td></tr>
   </table>
 </td></tr></table>
+<div id="levellistdiv">
+</div>
 <address>
 <a href="about.html">about this game</a>
 </address>
