--- a/about.html
+++ b/about.html
@@ -6,10 +6,7 @@
 <script type="text/javascript" src="excanvas.js"></script>
 <![endif]-->
 <meta http-equiv="Content-Style-Type" content="text/css">
-<script type="text/javascript" src="./exarray.js"></script>
-<script type="text/javascript" src="./exmath.js"></script>
-<script type="text/javascript" src="./4dsoko_main.js"></script>
-<script type="text/javascript" src="./4dsoko_event.js"></script>
+<script type="text/javascript" src="./4dsoko_version.js"></script>
 <style><!--
   body{font-family:Arial; color:white; background-color:black}  
   input{border-style:solid}
@@ -63,13 +60,14 @@ please enable JavaScript.</li>
 <tr><td>Opera            </td><td>OK(11.62 )</td><td>OK(11.62  )</td><td>OK(*3)</td></tr>
 </table>
 (*1) very slow and <a href="excanvas.sourceforge.net">excanvas.js</a> is required for play with IE when you download. <br>
-(*2) editing level is not supported.<br>s
+(*2) editing level is not supported.<br>
 (*3) editing level is not supported and very slow...
 (*4) mouse is not supported.
 </td></tr></table>
 
 <address>
-version 1.5<br>
+version <span id="versiondisplay"></span><br>
+<script type="text/javascript" src="./4dsoko_version.js"></script>
 programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
 source code is at <a href="https://github.com/koteitan/4dsoko">github</a><br>
 </address>
