--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <td></td>    <td class="tdbutton" onclick="javscript:var e=new Object();e.shiftKey=true ;e.keyCode=68;handleKeyDown(e);">D</td></tr>
   <tr><td>↓+w</td><td class="tdbutton" onclick="javscript:var e=new Object();e.shiftKey=true ;e.keyCode=88;handleKeyDown(e);">X</td><td></td></tr>
   </table><br clear=right><br>
-  <table align=right><caption>Rotation:</caption>
+  <table align=right><caption>Coodinate Rotation:</caption>
     <tr><th>x</th><th>y</th><th>z</th><th>w</th></tr>
     <tr>
       <th>x</th>
