4dsoko to 4dTRON.
4dsoko to 4dTRON.
add google analisys script.

--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@
   address{text-align:right}
   td{text-align:center}
 --></style>
-<title>about 4Dsoko</title>
+<title>about 4DTRON</title>
 </head>
 <body>
-<h1>about 4Dsoko</h1>
+<h1>about 4DTRON</h1>
 <ul>
-<li>4Dsoko is a 4-dimensional sokoban like puzzle game.<br>
+<li>4DTRON is a 4-dimensional TRON like puzzle game.<br>
 please move the all boxes into the goals.</li>
 <li>this game is implemented with JavaScript and HTML5 Canvas.<br>
 please enable JavaScript.</li>
@@ -53,11 +53,11 @@ please enable JavaScript.</li>
 <h2>Browser Support:</h2>
 <table border=1 style="border-collapse:collapse">
 <tr><td></td><td>WindowsXP</td><td>MacOSXLion</td><td>iPhone</td></tr>
-<tr><td>Internet Explorer</td><td>OK(8.0)(*1)</td><td>-</td><td>-</td></tr>
-<tr><td>Safari           </td><td>OK( 5.1.2)</td><td>OK( 5.1.3 )</td><td>OK(*2)</td></tr>
-<tr><td>FireFox          </td><td>OK(11.0  )(*4)</td><td>OK(11.0   )</td><td>-</td></tr>
-<tr><td>Chrome           </td><td>OK(17    )</td><td>OK(18.0   )</td><td>-</td></tr>
-<tr><td>Opera            </td><td>OK(11.62 )</td><td>OK(11.62  )</td><td>OK(*3)</td></tr>
+<tr><td>Internet Explorer</td><td>?(8.0)(*1)</td><td>-</td><td>-</td></tr>
+<tr><td>Safari           </td><td>?( 5.1.2)</td><td>?( 5.1.3 )</td><td>?(*2)</td></tr>
+<tr><td>FireFox          </td><td>?(11.0  )(*4)</td><td>?(11.0   )</td><td>-</td></tr>
+<tr><td>Chrome           </td><td>OK(17    )</td><td>?(18.0   )</td><td>-</td></tr>
+<tr><td>Opera            </td><td>?(11.62 )</td><td>?(11.62  )</td><td>?(*3)</td></tr>
 </table>
 (*1) very slow and <a href="excanvas.sourceforge.net">excanvas.js</a> is required for play with IE when you download. <br>
 (*2) editing level is not supported.<br>
@@ -69,7 +69,7 @@ please enable JavaScript.</li>
 version <span id="versiondisplay"></span><br>
 <script type="text/javascript" src="./4dsoko_version.js"></script>
 programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
-source code is at <a href="https://github.com/koteitan/4dsoko">github</a><br>
+source code is at <a href="https://github.com/koteitan/4dsoko/tree/4dtron">github</a><br>
 </address>
 
 
