--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
 <script type="text/javascript" src="./4dsoko_main.js"></script>
 <script type="text/javascript" src="./4dsoko_event.js"></script>
 <style><!--
-  body{font-family:Arial; color:#8888FF; background-color:black}  
-  a{color:#8888FF;border-style:none;text-decoration:underline}
-  a:link{color:#8888FF;border-style:none;text-decoration:underline}
-  a:visited{color:#8888FF;border-style:none;text-decoration:underline}
-  a:hover{color:#8888FF;border-color:none;text-decoration:underline}
+  body{font-family:Arial; color:#88FF88; background-color:black}  
+  a{color:#88FF88;border-style:none;text-decoration:underline}
+  a:link{color:#88FF88;border-style:none;text-decoration:underline}
+  a:visited{color:#88FF88;border-style:none;text-decoration:underline}
+  a:hover{color:#88FF88;border-color:none;text-decoration:underline}
   address{text-align:right;font-style:normal}
-  td{border-color:#8888FF;text-align:center}
-  th{border-color:#8888FF;text-align:center}
-  input{border-style:solid;border-color:#8888FF;background-color:#000000;color:#8888FF}
+  td{border-color:#88FF88;text-align:center}
+  th{border-color:#88FF88;text-align:center}
+  input{border-style:solid;border-color:#88FF88;background-color:#000000;color:#88FF88}
   .tdbutton{border-width:1px;border-style:solid;border-color:white;height:30px;width:30px}
   hr{border-style:solid}
+  canvas{padding:0px;margin:0px}
 --></style>
 <title>4D Billiyards</title>
 </head>
 <body>
 <div style="vertical-align:top"><!--img src="logo.png"-->&nbsp;4 dimensional Billiyards game.</div>
+<div id="debugout"> </div>
 <br>
 <table style="width:100%"><td style="text-align:right;vertical-align:center">
 <!-- left UI -->
 </td><td style="text-align:left">
-<canvas align="left" id="canvas0" width="768" height="768" style="background-color:black;border-width:1px;border-style:solid;border-color:#8888FF"></canvas><br>
+<canvas align="left" id="canvas0" width="768" height="768" style="background-color:black;border-width:1px;border-style:solid;border-color:#88FF88"></canvas><br>
 <form id="modeform">
 <input type=button name="startbutton" id="startbutton" value="start" onclick="javascript:restartGame();">
 <div id="nameentrydiv"></div>
@@ -39,7 +41,6 @@
 <br>
 <br>
 <br>
-<div id="debugout"></div>
 </td><td style="text-align:center">
 <!-- rightUI (key description)-->
   <br>
