--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 <title>4D Billiyards</title>
 </head>
 <body>
-<div style="vertical-align:top"><!--img src="logo.png"-->&nbsp;4 dimensional Billiyards game.</div>
+<div style="vertical-align:top"><img src="logo.png">&nbsp;4 dimensional Billiyards game.</div>
 <div id="debugout"> </div>
 <br>
 <table style="width:100%"><td style="text-align:right;vertical-align:center">
 <!-- left UI -->
 </td><td style="text-align:left">
-<canvas align="left" id="canvas0" width="768" height="768" style="background-color:black;border-width:1px;border-style:solid;border-color:#88FF88"></canvas><br>
+<canvas align="left" id="canvas0" width="512" height="512" style="background-color:black;border-width:1px;border-style:solid;border-color:#88FF88"></canvas><br>
 <form id="modeform">
-<input type=button name="startbutton" id="startbutton" value="start" onclick="javascript:restartGame();">
+<input type=button name="startbutton" id="startbutton" value="RESET" onclick="javascript:restartGame();">
 <div id="nameentrydiv"></div>
 </form>
 <br>
@@ -60,7 +60,7 @@
   version <span id="versiondisplay"></span><br>
   <script type="text/javascript" src="./4dsoko_version.js"></script>
   programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
-  source code is at <a href="https://github.com/koteitan/4dbill">github</a><br>
+  source code is at <a href="https://github.com/koteitan/4dsoko/tree/4dbill">github</a><br>
   </address>
 </body>
 </html>
