--- a/about.html
+++ b/about.html
@@ -17,13 +17,12 @@
   address{text-align:right}
   td{text-align:center}
 --></style>
-<title>about 4DTRON</title>
+<title>about 4D Billiyards</title>
 </head>
 <body>
-<h1>about 4DTRON</h1>
+<h1>about 4D Billiyards</h1>
 <ul>
-<li>4DTRON is a 4-dimensional TRON like puzzle game.<br>
-please move the all boxes into the goals.</li>
+<li>4D Billiyards is a 4-dimensional Billiyards game.<br>
 <li>this game is implemented with JavaScript and HTML5 Canvas.<br>
 please enable JavaScript.</li>
 <li>With IE, excanvas.js is working. please enable ActiveX controls.</li>
@@ -34,42 +33,22 @@ please enable JavaScript.</li>
 <a href="./">back to game</a>
 </td></tr></table>
 
-<h2>Key Assign:</h2>
-<table><td style="vertical-align:top">
-  <table><caption>to play</caption>
-  <tr><th>key</th><th>function</th></tr>
-  <tr><td>awdx</td><td>move in (x,y).</td></tr>
-  <tr><td>AWDX</td><td>move in (z,w).</td></tr>
-  </table>
-    <br>
-  <table><caption>to edit</caption>
-  <tr><th>key</th><th>function</th></tr>
-  <tr><td>awdx</td><td>move cursor.</td></tr>
-  <tr><td>q/e</td><td>change charactor.</td></tr>
-  <tr><td>[enter]</td><td>put charactor.</td></tr>
-  <tr><td>mouse<br>left click</td><td>put charactor.</td></tr>
-  </table>
-</td><td style="vertical-align:top">
 <h2>Browser Support:</h2>
 <table border=1 style="border-collapse:collapse">
 <tr><td></td><td>WindowsXP</td><td>MacOSXLion</td><td>iPhone</td></tr>
-<tr><td>Internet Explorer</td><td>?(8.0)(*1)</td><td>-</td><td>-</td></tr>
-<tr><td>Safari           </td><td>?( 5.1.2)</td><td>?( 5.1.3 )</td><td>?(*2)</td></tr>
-<tr><td>FireFox          </td><td>?(11.0  )(*4)</td><td>?(11.0   )</td><td>-</td></tr>
-<tr><td>Chrome           </td><td>OK(17    )</td><td>?(18.0   )</td><td>-</td></tr>
-<tr><td>Opera            </td><td>?(11.62 )</td><td>?(11.62  )</td><td>?(*3)</td></tr>
+<tr><td>Internet Explorer</td><td>?</td><td>-</td><td>-</td></tr>
+<tr><td>Safari           </td><td>?</td><td>?</td><td>?</td></tr>
+<tr><td>FireFox          </td><td>?</td><td>?</td><td>-</td></tr>
+<tr><td>Chrome           </td><td>OK (31.0)</td><td>?</td><td>-</td></tr>
+<tr><td>Opera            </td><td>?</td><td>?</td><td>?</td></tr>
 </table>
-(*1) very slow and <a href="excanvas.sourceforge.net">excanvas.js</a> is required for play with IE when you download. <br>
-(*2) editing level is not supported.<br>
-(*3) editing level is not supported and very slow...
-(*4) mouse is not supported.
 </td></tr></table>
 
 <address>
 version <span id="versiondisplay"></span><br>
 <script type="text/javascript" src="./4dsoko_version.js"></script>
 programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
-source code is at <a href="https://github.com/koteitan/4dsoko/tree/4dtron">github</a><br>
+source code is at <a href="https://github.com/koteitan/4dsoko/tree/4dbill">github</a><br>
 </address>
 
 
