change design (font, color)

--- a/about.html
+++ b/about.html
@@ -8,14 +8,18 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <script type="text/javascript" src="./4dsoko_version.js"></script>
 <style><!--
-  body{font-family:Arial; color:white; background-color:black}  
-  input{border-style:solid}
-  a{color:#ffffff;border-style:none;text-decoration:underline}
-  a:link{color:#ffffff;border-style:none;text-decoration:underline}
-  a:visited{color:#ffffff;border-style:none;text-decoration:underline}
-  a:hover{color:#ffffff;border-color:none;text-decoration:underline}
-  address{text-align:right}
-  td{text-align:center}
+  body{font-family:Segoe UI; color:#88FF88; background-color:black}  
+  a{color:#88FF88;border-style:none;text-decoration:underline}
+  a:link{color:#88FF88;border-style:none;text-decoration:underline}
+  a:visited{color:#88FF88;border-style:none;text-decoration:underline}
+  a:hover{color:#88FF88;border-color:none;text-decoration:underline}
+  address{text-align:right;font-style:normal}
+  td{border-color:#88FF88;text-align:center}
+  th{border-color:#88FF88;text-align:center}
+  input{border-style:solid;border-color:#88FF88;background-color:#000000;color:#88FF88}
+  .tdbutton{border-width:1px;border-style:solid;border-color:white;height:30px;width:30px}
+  hr{border-style:solid}
+  canvas{padding:0px;margin:0px}
 --></style>
 <title>about 4D Billiyards</title>
 </head>
