--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="./4dsoko_main.js"></script>
 <script type="text/javascript" src="./4dsoko_event.js"></script>
 <style><!--
-  body{font-family:Arial; color:#88FF88; background-color:black}  
+  body{font-family:Segoe UI; color:#88FF88; background-color:black}  
   a{color:#88FF88;border-style:none;text-decoration:underline}
   a:link{color:#88FF88;border-style:none;text-decoration:underline}
   a:visited{color:#88FF88;border-style:none;text-decoration:underline}
@@ -38,14 +38,8 @@
 <input type=button name="startbutton" id="startbutton" value="RESET" onclick="javascript:restartGame();">
 <div id="nameentrydiv"></div>
 </form>
-<br>
-<br>
-<br>
 </td><td style="text-align:center">
 <!-- rightUI (key description)-->
-  <br>
-  <br>
-  <br>
 </td></tr></table>
 <ul>
   <li><a href="about.html">about this game</a></li>
@@ -53,7 +47,6 @@
 </address>
 <div id="levellistdiv">
 </div>
-<br><br><br><br><br>
 <hr>
   <address>
   4D Billiyards
